# codex-commits-analysis

./: .gitmodules  README.md  pyproject.toml
output/: codex_weekly_report_data.csv  openclaw_weekly_report_data.csv  opencode_weekly_report_data.csv  pytorch_weekly_report_data.csv  vscode_weekly_report_data.csv
scripts/: analyze_repo_history.py
src/codex_commit_analysis/: __main__.py  cli.py
src/git_weekly_trends/: __main__.py  cli.py
