[project]
name = "codex-commit-analysis"
version = "0.1.0"
description = "Analyze weekly commit and code churn trends for a git repository."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]

[project.scripts]
codex-commit-analysis = "codex_commit_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
