[project]
name = "git-weekly-trends"
version = "0.1.0"
description = "3-panel weekly trend charts (lines changed, PRs per week, median PR size) from any git repository."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
]

[project.scripts]
git-weekly-trends = "git_weekly_trends.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
